<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/top_bag"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FF76"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/bienvenidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenidos_a"
                android:textSize="20sp"
                android:fontFamily="casual"/>

            <TextView
                android:id="@+id/inventariapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventariapp"
                android:fontFamily="casual"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/descripcion1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="casual"
            android:paddingStart="10dp"
            android:text="@string/esta_es_una_app_desarrollada_con_fines_academicos"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry,TextSizeCheck" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/descripcion2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:textSize="15sp"
            android:fontFamily="casual"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:paddingLeft="240dp"
            android:text="@string/creada_para_npoder_mejorar_nel_manejo_de_ninventario_del_nnegocio_establecido"
            tools:ignore="RtlSymmetry" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        tools:ignore="UselessParent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:layout_gravity="center_horizontal"/>


    </FrameLayout>



</LinearLayout>